# xinhe

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml
configs/: base.yaml  congliu.yaml  curriculum.yaml  curriculum_congliu.yaml  curriculum_longcite.yaml  curriculum_migrate.yaml  curriculum_minimind.yaml  curriculum_novel.yaml  curriculum_pcap.yaml  curriculum_pcap_skeleton.yaml  curriculum_persona.yaml  curriculum_qwen.yaml  curriculum_qwen3.5-0.8b.yaml  curriculum_qwen3.5-4b.yaml  curriculum_qwen3.5-9b.yaml  curriculum_qwen_24gb.yaml  curriculum_qwen_8b.yaml  curriculum_skeleton.yaml  curriculum_think.yaml  curriculum_v8.yaml  curriculum_v8_warmup_only.yaml  curriculum_warmup_only.yaml  exp0b.yaml  exp1a.yaml  exp1b.yaml  exp1b_curriculum.yaml  exp1b_gate2.yaml  exp1c.yaml  exp_m4.yaml  longcite.yaml  migrate_0.8b_to_4b.yaml  migrate_0.8b_to_9b.yaml  minimind.yaml  novel.yaml  pcap.yaml  pcap_dryrun.yaml  pcap_skeleton.yaml  persona_inject.yaml  persona_unified.yaml  persona_unified_0.8b.yaml  (+14 more)
docs/: 4b_diagnosis_and_statenet.md  4b_training_issues.md  architecture.md  architecture_v2_symmetric_crossattn.md  comparison_em_llm.md  consultation_20260421.md  curriculum_learning.md  data_spec.md  design_rationale.md  failure_postmortem.md  inner_sgd_triton_math.md  lora_ablation.md  milestone4_debug.md  msa_analysis.md  plan_think_curriculum.md  related_work.md  roadmap.md  training_optimization.md  心核  架构蓝图：大一统快慢交替记忆网络.md  心核 架构蓝图：分层记忆与昼夜双相.md
models/qwen3.5-0.8b/: .mv
models/qwen3.5-4b/: model.safetensors.index.json
scripts/: build_chat_cache.py  build_dicts.py  build_val_sets.py  chat.py  chat_smoke.py  debug_value_errors.py  deploy.py  download_from_hf.py  eval_value_breakdown.py  evaluate.py  generate_data.py  generate_memory_data.py  generate_persona_data.py  generate_think_data.py  probe_beta.py  remote.py  shift_beta_bias.py  smoke_codex.py  smoke_openrouter_model.py  test_backbone_chat.py  test_empty_state.py  test_persona.py  train.py  train_persona.py  upload_to_hf.py  validate_memory.py  verbatim_smoke.py  verify_state.py  visualize_state.py
tests/: test_backbone.py  test_beat3_purity.py  test_chunk_update_triton.py  test_config.py  test_config_validate.py  test_congliu_generator.py  test_curriculum_data.py  test_dataloader.py  test_delta_kernel.py  test_fact.py  test_hippocampus.py  test_inner_sgd_triton.py  test_lora.py  test_model.py  test_neural_memory_pair.py  test_normalize_tier.py  test_per_layer_kv.py  test_skeleton_runner.py  test_skeleton_warmup.py  test_stage0_warmup.py  test_state.py  test_training.py  test_turn.py  test_v8_dataloader.py  test_v8_memory_state.py  test_v8_skeleton_runner.py
xinhe/: __init__.py
xinhe/config/: __init__.py  errors.py  validate.py
xinhe/data/: claude_cli_sampler.py  codex_cli_sampler.py  conversation.py  curriculum_data.py  deepseek_sampler.py  gemini_cli_sampler.py  generate_memory_data.py  generate_persona_data.py  generate_think_data.py  io.py  memory_state.py  mix.py  multi_fact_templates.py  openrouter_sampler.py  persona.py  registry.py  (+7 more)
(+143 files in other folders)
