[project]
name = "xinhe"
version = "0.1.0"
description = "心核 — 统一状态涌现实验：探索持久状态中的记忆、抽象与多时间尺度涌现"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "wandb",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "safetensors>=0.7.0",
    "transformers>=5.4.0",
    "accelerate",
    "flash-linear-attention ; sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
include = ["xinhe*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
