[project]
name = "xinhe"
version = "0.1.0"
description = "心核 — 统一状态涌现实验：探索持久状态中的记忆、抽象与多时间尺度涌现"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "wandb",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "safetensors>=0.7.0",
    "transformers>=5.4.0",
    "accelerate",
    "flash-linear-attention ; sys_platform == 'linux'",
    "huggingface-hub>=0.24",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
include = ["xinhe*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # PyTorch 自己内部 torch/jit/_script.py 用 torch.jit.script_method,Python 3.14+ 触发
    # deprecation。不是我们代码,等 upstream 适配即可。限定模块来源避免误伤别的 lib。
    "ignore::DeprecationWarning:torch.jit._script",
]
