[project]
name = "xinhe"
version = "0.1.0"
description = "心核 — 统一状态涌现实验：探索持久状态中的记忆、抽象与多时间尺度涌现"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "wandb",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "safetensors>=0.7.0",
    "transformers>=5.4.0",
    "accelerate",
    "flash-linear-attention ; sys_platform == 'linux'",
    "huggingface-hub>=0.24",
    # NeuralMemory + MemoryMLP (xinhe/model/neural_memory.py) 依赖
    "tensordict",
    "assoc-scan>=0.0.4",
    "einops>=0.8.0",
    "einx>=0.3.0",
    # Hippo inner SGD Triton kernel (xinhe/model/inner_sgd_triton.py)
    # Linux: torch 已传递依赖 triton,显式声明保证 uv sync 不漏装
    # Windows: woct0rdho/triton-windows fork(sm_120 Blackwell 官方支持)
    "triton ; sys_platform == 'linux'",
    "triton-windows<3.7 ; sys_platform == 'win32'",
    "cut-cross-entropy>=25.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
include = ["xinhe*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
